--- a/server/.development.env
+++ b/server/.development.env
@@ -1,6 +1,6 @@
-PORT=5080
+PORT=5000
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
-POSTGRES_DB=school-book
+POSTGRES_DB=schoolbook
