--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
+    "sqlite3": "^5.1.4",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
