--- a/server/.production.env
+++ b/server/.production.env
@@ -1,6 +1,6 @@
-PORT=7080
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+PORT=7000
+POSTGRES_HOST=containers-us-west-71.railway.app
+POSTGRES_PORT=6813
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=root
-POSTGRES_DB=school-book
+POSTGRES_PASSWORD=pvRMuwQs1OkYDSpkJ0ZV
+POSTGRES_DB=railway
