--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "cross-env NODE_ENV=production nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=production nest start",
     "start:dev": "cross-env NODE_ENV=development nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -33,7 +33,6 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.28.0",
     "sequelize-typescript": "^2.1.5",
-    "sqlite3": "^5.1.4",
     "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
