--- a/server/.env
+++ b/server/.env
@@ -3,4 +3,4 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
-POSTGRES_DB=school-book
+POSTGRES_DB=schoolbook
