--- a/client/package.json
+++ b/client/package.json
@@ -27,7 +27,8 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@fontsource/roboto": "^4.5.8"
   },
   "scripts": {
     "start": "react-scripts start",
