--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@fontsource/neucha": "^4.5.9",
+    "@fontsource/roboto": "^4.5.8",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -27,8 +29,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4",
-    "@fontsource/roboto": "^4.5.8"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
