--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "lint-staged": "^12.1.2",
     "prettier": "^2.5.1",
     "react": "^18.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-i18next": "^11.16.9",
     "react-redux": "^8.0.1",
