--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.43.0",
     "react-i18next": "^11.16.9",
+    "react-moment": "^1.1.3",
     "react-redux": "^8.0.1",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
