--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "@nestjs/swagger": "^6.1.4",
     "bcryptjs": "^2.4.3",
     "cross-env": "^7.0.3",
+    "moment": "^2.29.4",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
