--- a/client/package.json
+++ b/client/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@fontsource/neucha": "^4.5.9",
     "@fontsource/roboto": "^4.5.8",
+    "@maptiler/geocoding-control": "^0.0.75",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^14.1.1",
     "@types/jest": "^27.5.0",
+    "@types/mapbox-gl": "^2.7.10",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
@@ -21,12 +23,15 @@
     "i18next-http-backend": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "lint-staged": "^12.1.2",
+    "mapbox-gl": "^2.13.0",
+    "maplibre-gl": "^2.4.0",
     "prettier": "^2.5.1",
     "react": "^18.1.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.43.0",
     "react-i18next": "^11.16.9",
+    "react-map-gl": "^7.0.21",
     "react-moment": "^1.1.3",
     "react-redux": "^8.0.1",
     "react-router": "^6.2.2",
