--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,8 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "worker-loader": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,7 +57,9 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "defaults",
+      "not ie 11"
     ],
     "development": [
       "last 1 chrome version",
